# gitpatrol

./: .gitignore  .prettierignore  Cargo.toml  README.md  SECURITY.md  eslint.config.mjs  package-lock.json  package.json  tsconfig.base.json  tsconfig.json  vite.config.ts
.github/workflows/: deploy.yml
.github/workflows/setup-node/: action.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/src/connectors/: mod.rs
crates/core/: Cargo.toml
crates/core/src/: connector.rs  lib.rs  scanner.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: lib.rs
src/: main.rs  scanner.rs
src/connectors/: folder.rs  github.rs  mod.rs  zip.rs
webapp/: index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
webapp/app/: page.tsx
webapp/src/: App-old.tsx  App.tsx  ScanDialog.tsx  index.ts  page.tsx
webapp/src/components/ui/: button.tsx  card.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx
webapp/src/lib/: wasm.ts
webapp/src/styles/: global.css
