[package]
name = "repo-analyzer"
version = "0.1.0"
edition = "2021"

[dependencies]
zip = "0.6"
walkdir = "2.4"
glob = "0.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
colored = "2.0"
reqwest = { version = "0.11", features = ["json"] }
async-trait = "0.1"
tokio = { version = "1.0", features = ["full"] }
url = "2.4"
futures = "0.3"
tokio-stream = "0.1"
